[tool.poetry]
name = "matrufsc-api"
version = "0.1.0"
description = ""
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
license = "MIT"

[tool.poetry.scripts]
matrufsc-api = "matrufsc_api.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
click = "^7.0"
matrufsc-crawler = {git = "https://github.com/cauebs/matrufsc-crawler"}
[tool.poetry.dev-dependencies]
black = "^19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
