[tool.poetry]
name = "matrufsc-api"
version = "0.2.0"
description = ""
authors = [
    "Cauê Baasch de Souza <cauebs@pm.me>",
    "Artur Barichello <artur@barichello.me>"
]
license = "GPL-3.0"

[tool.poetry.scripts]
matrufsc-api = "matrufsc_api.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
click = "^7.0"
matrufsc-crawler = {git = "https://github.com/caravelahc/matrufsc-crawler"}
[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8 = "^3.7.8"
mypy = "^0.720"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
